--- a/src/main/resources/assets/vinery/lang/en_us.json
+++ b/src/main/resources/assets/vinery/lang/en_us.json
@@ -159,5 +159,5 @@
   "item.vinery.applesauce_line1.tooltip": " - Apple",
   "item.vinery.applesauce_line2.tooltip": " - Sugar",
   "block.vinery.winerack.tooltip.shift_1": "A Storage Option for Wine Bottles",
-  "block.vinery.winerack.tooltip.shift_2": "Shift-right click with empty hand to take out bottles",
+  "block.vinery.winerack.tooltip.shift_2": "Shift-right click with empty hand to take out bottles"
 }
